[package]
name = "enet-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "sync", "time", "rt", "macros"] }
futures = "0.3"
bytes = "1"
thiserror = "2"
rand = "0.8"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[[test]]
name = "integration"
path = "tests/integration.rs"
